attached_assets/Pasted-Run-npm-run-test-fanoo2-backend-1-0-0-test-npm-run-build-node-r-tsconfig-paths-register-di-1752251283062_1752251283063.txt
Run npm run test

> @fanoo2/backend@1.0.0 test
> npm run build && node -r tsconfig-paths/register dist/index.js --health


> @fanoo2/backend@1.0.0 build
> tsc -p tsconfig.json 2>&1 | tee tsc-errors.log || true

Error: server/storage.ts(5,8): error TS2307: Cannot find module '@shared/schema' or its corresponding type declarations.
Error: shared/schema.ts(89,34): error TS2344: Type 'ZodObject<{}, { out: {}; in: {}; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{}, { out: {}; in: {}; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(90,35): error TS2344: Type 'ZodObject<{}, { out: {}; in: {}; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{}, { out: {}; in: {}; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(91,35): error TS2344: Type 'ZodObject<{}, { out: {}; in: {}; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{}, { out: {}; in: {}; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(92,40): error TS2344: Type 'ZodObject<{}, { out: {}; in: {}; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{}, { out: {}; in: {}; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(93,37): error TS2344: Type 'ZodObject<{}, { out: {}; in: {}; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{}, { out: {}; in: {}; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(94,38): error TS2344: Type 'ZodObject<{}, { out: {}; in: {}; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{}, { out: {}; in: {}; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(95,38): error TS2344: Type 'ZodObject<{}, { out: {}; in: {}; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{}, { out: {}; in: {}; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(96,40): error TS2344: Type 'ZodObject<{}, { out: {}; in: {}; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{}, { out: {}; in: {}; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
node:internal/modules/cjs/loader:1404
  throw err;
  ^

Error: Cannot find module 'tsconfig-paths/register'
Require stack:
- internal/preload
    at Function._resolveFilename (node:internal/modules/cjs/loader:1401:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1057:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1062:22)
    at Function._load (node:internal/modules/cjs/loader:1211:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1487:12)
    at node:internal/modules/cjs/loader:2045:12
    at loadPreloadModules (node:internal/process/pre_execution:743:5)
    at setupUserModules (node:internal/process/pre_execution:208:5) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [ 'internal/preload' ]
}

Node.js v22.17.0
Error: Process completed with exit code 1.
